--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "reset-db": "ts-node src/utils/reset-contact-message.js"
@@ -16,6 +17,7 @@
     "csrf": "^3.1.0",
     "libphonenumber-js": "^1.12.8",
     "next": "15.3.1",
+    "next-sitemap": "^4.2.3",
     "prisma": "^6.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
